--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                 <li>
                   page (optional): page number to return (default: 1)<br />
                   <a
-                    href="https://jittery-seal-leg-warmers.cyclic.app/toys?page=1"
+                    href="https://gal-list-toys.cyclic.app/toys?page=1"
                     >https://gal-list-toys.cyclic.app/toys?page=1</a
                   >
                 </li>
@@ -43,14 +43,14 @@
                   limit (optional): number of toys per page (default: 5,
                   maximum: 10) <br />
                   <a
-                    href="https://jittery-seal-leg-warmers.cyclic.app/toys?limit=3"
+                    href="https://gal-list-toys.cyclic.app/toys?limit=2"
                     >https://gal-list-toys.cyclic.app/toys?limit=2</a
                   >
                 </li>
                 <li>
                   sort (optional): field to sort by (default: price) <br />
                   <a
-                    href="https://jittery-seal-leg-warmers.cyclic.app/toys?sort=price"
+                    href="https://gal-list-toys.cyclic.app/toys?sort=price"
                     >https://gal-list-toys.cyclic.app/toys?sort=price</a
                   >
                 </li>
@@ -58,7 +58,7 @@
                   reverse (optional): if set to yes, sorts in descending order
                   <br />
                   <a
-                    href="https://jittery-seal-leg-warmers.cyclic.app/toys?sort=price&reverse=yes"
+                    href="https://gal-list-toys.cyclic.app/toys?sort=price&reverse=yes"
                     >https://gal-list-toys.cyclic.app/toys?sort=price&reverse=yes</a
                   >
                 </li>
@@ -66,7 +66,7 @@
                   s (optional): the search query to match against toy names,
                   infos or categories <br />
                   <a
-                    href="https://jittery-seal-leg-warmers.cyclic.app/toys?s=pop-it"
+                    href="https://gal-list-toys.cyclic.app/toys?s=pop-it"
                     >https://gal-list-toys.cyclic.app/toys?s=pop-it</a
                   >
                 </li>
@@ -90,7 +90,7 @@
                   limit (optional): number of toys per page (default: 5,
                   maximum: 10) <br />
                   <a
-                    href="https://jittery-seal-leg-warmers.cyclic.app/toys/prices?limit=3"
+                    href="https://gal-list-toys.cyclic.app/toys/prices?limit=2"
                     >https://gal-list-toys.cyclic.app/toys/prices?limit=2</a
                   >
                 </li>
@@ -99,7 +99,7 @@
                   max (optional): maximum price to filter by (default: Infinity)
                   <br />
                   <a
-                    href="https://jittery-seal-leg-warmers.cyclic.app/toys/prices?min=50&max=400"
+                    href="https://gal-list-toys.cyclic.app/toys/prices?min=50&max=400"
                     >https://gal-list-toys.cyclic.app/toys/prices?min=50&max=400</a
                   >
                 </li>
