--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,8 @@
                   s (optional): the search query to match against toy names,
                   infos or categories <br />
                   <a
-                    href="https://gal-list-toys.cyclic.app/toys?s=pop-it"
-                    >https://gal-list-toys.cyclic.app/toys?s=pop-it</a
+                    href="https://gal-list-toys.cyclic.app/toys?s=Building"
+                    >https://gal-list-toys.cyclic.app/toys?s=Building</a
                   >
                 </li>
               </ul>
