--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
                   name: String, // 2-100 characters<br />
                   info: String, // 2-400 characters<br />
                   category: String, // 2-400 characters<br />
-                  ing_url: String, // 2-400 characters, allowed but not
+                  img_url: String, // 2-400 characters, allowed but not
                   required<br />
                   price: Number // 1-99999<br />
                   }
@@ -163,7 +163,7 @@
                   name: String, // 2-100 characters<br />
                   info: String, // 2-400 characters<br />
                   category: String, // 2-400 characters<br />
-                  ing_url: String, // 2-400 characters, allowed but not
+                  img_url: String, // 2-400 characters, allowed but not
                   required<br />
                   price: Number // 1-99999<br />
                   }
